[package]
name = "rustednes-cli"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "A CLI frontend for rustednes-core"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
minifb = "0.20"
rustednes-core = { path = "../rustednes-core" }
rustednes-common = { path = "../rustednes-common" }
time = "0.3"
cpal = "0.13"
structopt = "0.3"
structopt-derive = "0.4"
zip = "0.5"
tracing = "0.1"
