[package]
name = "rustednes-core"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "The core of RustedNES, an NES (Nintendo Entertainment System) emulator"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bitflags = "1.0"
byteorder = "1"
bit_reverse = "0.1.5"
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.10.4"
