[package]
name = "rustednes-core"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "The core of RustedNES, an NES (Nintendo Entertainment System) emulator"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
bitflags = "1.1.0"
byteorder = "1"
bit_reverse = "0.1.8"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.1"
thiserror = "1.0.19"
