[package]
name = "rustednes-core"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "The core of RustedNES, an NES (Nintendo Entertainment System) emulator"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.3", features = ["serde"] }
byteorder = "1.4"
bit_reverse = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
thiserror = "1.0"
once_cell = "1.12"
enum_dispatch = "0.3"
