[package]
name = "rustednes-libretro"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "A libretro core for rustednes-core"
license = "MIT/Apache-2.0"

[lib]
name = "rustednes_libretro"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.58"
rustednes-core = { path="../rustednes-core" }
serde = "1.0"
serde_cbor = "0.10.2"
