[package]
name = "rustednes-sdl"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "An SDL2 frontend for rustednes-core"
license = "MIT/Apache-2.0"
edition = "2021"
default-run = "rustednes-sdl"

[dependencies]
rustednes-core = { path = "../rustednes-core" }
rustednes-common = { path = "../rustednes-common" }
sdl2 = "0.37.0"
clap = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0"
zip = "2.1.3"
tracing = "0.1"
