[package]
name = "rustednes-sdl"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "An SDL2 frontend for rustednes-core"
license = "MIT/Apache-2.0"
edition = "2024"
default-run = "rustednes-sdl"

[dependencies]
rustednes-core = { path = "../rustednes-core" }
rustednes-common = { path = "../rustednes-common" }
sdl2 = "0.38.0"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
zip = "7.0"
tracing = "0.1"
