[package]
name = "sadnes-core"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "The core of an sadNES, an NES (Nintendo Entertainment System) emulator"
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.0"
byteorder = "1"
bit_reverse = "0.1.5"
lazy_static = "1.0"
