[package]
name = "sadnes-libretro"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
description = "A libretro core for sadnes-core"
license = "MIT/Apache-2.0"

[lib]
name = "sadnes_libretro"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.*"
sadnes-core = { path="../sadnes-core" }
serde = "1.0"
serde_cbor = "0.8.2"